Test - ny stønadsperiode gir opphør SVP